# AtividadeOpenGLM2

./: CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.F9F2FD00D7149CC3.idx  glad.h.33F2B9CFC4C3ACE7.idx  khrplatform.h.382E7F418FAA09BD.idx  main.cpp.EEE95C2BF0239434.idx  shaderClass.hpp.391351F9E91731D2.idx
include/Triangle/: Triangle.hpp
include/glad/: glad.h
include/shaderClass/: shaderClass.hpp
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  helloRectangle.cpp  helloTriangle.cpp  main.cpp
